# rust-aws-s3-downloader

./: Cargo.toml  README.md
src/: main.rs
src/config/: aws_sdk_s3_client.rs  mod.rs
src/constant/: constants.rs
src/controller/: download_controller.rs  health_controller.rs  mod.rs
src/dto/: download_request.rs  mod.rs
src/enums/: common_error.rs
src/service/: aws_sdk_s3_service.rs  download_service.rs  mod.rs
